# serializer version: 1
# name: test_work_item_list_row_list[ag]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': 'Watson, Morgan and Vaughan',
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'e6a4abad-0eb7-4180-9698-bd4242b2f359',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'process-deadline-date': '2025-01-01',
          'special-id': '2025-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': 'e6a4abad-0eb7-4180-9698-bd4242b2f359',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Watson, Morgan and Vaughan',
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'song-light',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '3903c38c-dd3c-4d2a-8cc9-cf82d40e4696',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'process-deadline-date': '2025-01-01',
          'special-id': '2025-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-task',
          'unread': True,
        }),
        'id': '3903c38c-dd3c-4d2a-8cc9-cf82d40e4696',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Watson, Morgan and Vaughan',
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'f65e2f08-078f-43d6-ad7d-f78f95bd3374',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'process-deadline-date': '2025-01-01',
          'special-id': '2025-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'f65e2f08-078f-43d6-ad7d-f78f95bd3374',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'f3af7352-1e91-4dd2-9009-d8c58e64e33b',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Frieda Weihmann',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': '2025-01-01',
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': '2025-01-01',
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'f3af7352-1e91-4dd2-9009-d8c58e64e33b',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Watson, Morgan and Vaughan',
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '4486ac25-6472-44f6-a83b-461f4c919a15',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'process-deadline-date': '2025-01-01',
          'special-id': '2025-1',
          'status': 'completed',
          'target-deadline-date': '2025-01-02',
          'task': 'completed',
          'unread': True,
        }),
        'id': '4486ac25-6472-44f6-a83b-461f4c919a15',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[be]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/ad9052e6-9c09-4704-bb93-e3610ec2bb55',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2021-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': 'ad9052e6-9c09-4704-bb93-e3610ec2bb55',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=foobar&ember-hash=/foobar/song-light',
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/b117dcb4-5103-4929-8481-36fc1acd33e6',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2021-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-task',
          'unread': True,
        }),
        'id': 'b117dcb4-5103-4929-8481-36fc1acd33e6',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/1e61ce0a-f36c-4cc7-a224-59cc4614b397',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2021-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'assigned',
          'unread': True,
        }),
        'id': '1e61ce0a-f36c-4cc7-a224-59cc4614b397',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/800e8800-ab90-44d9-a78f-b9044499b359',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Rotraud Etzler',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': '800e8800-ab90-44d9-a78f-b9044499b359',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/f2a3f58f-695e-4791-83b0-3eb36dc9bf25',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': '2021-1',
          'status': 'completed',
          'target-deadline-date': None,
          'task': 'completed',
          'unread': True,
        }),
        'id': 'f2a3f58f-695e-4791-83b0-3eb36dc9bf25',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[gr]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '2e367375-2309-45b6-a2eb-7ae17a1facae',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Chur',
          'process-deadline-date': '2025-01-01',
          'special-id': '2023-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '2e367375-2309-45b6-a2eb-7ae17a1facae',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'song-light',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '5682b500-5c6d-407c-a269-90a1dca3eff2',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Chur',
          'process-deadline-date': '2025-01-01',
          'special-id': '2023-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-task',
          'unread': True,
        }),
        'id': '5682b500-5c6d-407c-a269-90a1dca3eff2',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '54c856bf-f8eb-4695-a52e-71d158eb11dc',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Chur',
          'process-deadline-date': '2025-01-01',
          'special-id': '2023-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'assigned',
          'unread': True,
        }),
        'id': '54c856bf-f8eb-4695-a52e-71d158eb11dc',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'f65e2f08-078f-43d6-ad7d-f78f95bd3374',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Willibald Rudolph',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': '2025-01-01',
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': '2025-01-01',
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'f65e2f08-078f-43d6-ad7d-f78f95bd3374',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '8003224e-96de-44da-99d9-a4a293af58e6',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Chur',
          'process-deadline-date': '2025-01-01',
          'special-id': '2023-1',
          'status': 'completed',
          'target-deadline-date': '2025-01-02',
          'task': 'completed',
          'unread': True,
        }),
        'id': '8003224e-96de-44da-99d9-a4a293af58e6',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[so]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'e259a1ce-513d-4d11-82e0-3f706136b90d',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'process-deadline-date': '2025-01-01',
          'special-id': '2601-2024-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': 'e259a1ce-513d-4d11-82e0-3f706136b90d',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'song-light',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'b2525a05-a6be-41fe-b3f3-9d69182bfc5f',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'process-deadline-date': '2025-01-01',
          'special-id': '2601-2024-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-task',
          'unread': True,
        }),
        'id': 'b2525a05-a6be-41fe-b3f3-9d69182bfc5f',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '4f1e9a28-cbf7-43e8-a8c2-e40cc59b9c00',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'process-deadline-date': '2025-01-01',
          'special-id': '2601-2024-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'assigned',
          'unread': True,
        }),
        'id': '4f1e9a28-cbf7-43e8-a8c2-e40cc59b9c00',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'e16767f2-7e17-4238-9d75-06d12ba44b9e',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Hartwig Jähn',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': '2025-01-01',
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': '2025-01-01',
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'e16767f2-7e17-4238-9d75-06d12ba44b9e',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'f7cc257b-5263-4f6e-9e6b-0cc0570622d5',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'process-deadline-date': '2025-01-01',
          'special-id': '2601-2024-1',
          'status': 'completed',
          'target-deadline-date': '2025-01-02',
          'task': 'completed',
          'unread': True,
        }),
        'id': 'f7cc257b-5263-4f6e-9e6b-0cc0570622d5',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[sz]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/1134e1b7-1eb9-4c61-844e-9a372d94446a',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Joseph Fisher',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '1134e1b7-1eb9-4c61-844e-9a372d94446a',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=foobar&ember-hash=/foobar/song-light',
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/5f09ecd4-a91b-434c-bbc9-6d9b97155e5b',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Joseph Fisher',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-task',
          'unread': True,
        }),
        'id': '5f09ecd4-a91b-434c-bbc9-6d9b97155e5b',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/b4f7ab09-3ac3-47de-801e-f6d1090527b3',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Joseph Fisher',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'b4f7ab09-3ac3-47de-801e-f6d1090527b3',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/81443b81-3227-4c12-95c1-9eabb5ea4908',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Jane Yu',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': '81443b81-3227-4c12-95c1-9eabb5ea4908',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/add8d762-57eb-4788-863d-9104ae1d97df',
          'has-additional-demand': None,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Joseph Fisher',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'completed',
          'target-deadline-date': None,
          'task': 'completed',
          'unread': True,
        }),
        'id': 'add8d762-57eb-4788-863d-9104ae1d97df',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[ur]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': 'ACME AG',
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/479554b3-2284-4d13-951a-d4f7459e0eab',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'main-form',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Altdorf',
          'process-deadline-date': None,
          'special-id': '1201-21-003',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '479554b3-2284-4d13-951a-d4f7459e0eab',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'ACME AG',
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=foobar&ember-hash=/foobar/song-light',
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/6f21a59f-a7d2-4106-96f0-621e4b24c339',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'main-form',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Altdorf',
          'process-deadline-date': None,
          'special-id': '1201-21-003',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-task',
          'unread': True,
        }),
        'id': '6f21a59f-a7d2-4106-96f0-621e4b24c339',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'ACME AG',
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/137fcc46-4ad7-462a-aadf-3d45dc89641b',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'main-form',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Altdorf',
          'process-deadline-date': None,
          'special-id': '1201-21-003',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'assigned',
          'unread': True,
        }),
        'id': '137fcc46-4ad7-462a-aadf-3d45dc89641b',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/e30a5d1a-75a8-4612-a93d-06052a68d8e0',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Univ.Prof. Halina Bachmann',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'e30a5d1a-75a8-4612-a93d-06052a68d8e0',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'ACME AG',
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/579a10d4-4be8-42e6-8811-3b7f370888b3',
          'has-additional-demand': False,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'main-form',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Altdorf',
          'process-deadline-date': None,
          'special-id': '1201-21-003',
          'status': 'completed',
          'target-deadline-date': None,
          'task': 'completed',
          'unread': True,
        }),
        'id': '579a10d4-4be8-42e6-8811-3b7f370888b3',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2026-01-07T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': '/index/redirect-to-instance-resource/instance-id/<INSTANCE_ID>?instance-resource-name=work-items&ember-hash=/work-items/instances/<INSTANCE_ID>/work-items/af5aebfe-7b07-4849-ad55-cf1ed72e063d',
          'has-additional-demand': True,
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Ing. Giovanna Stoll B.Sc.',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'process-deadline-date': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'additional-demand',
          'unread': True,
        }),
        'id': 'af5aebfe-7b07-4849-ad55-cf1ed72e063d',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 6,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
